2024-11-14T00:48:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11828524003 # 479
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-14
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 424 814 / 425 815
* notice: next accum: outdated-unq outdated-all / unq all: 425 815 / 426 816
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-23] / [2024-11-13]

2024-10-31T00:49:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11604066964 # 465
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-31
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 423 813 / 425 815
* notice: next accum: outdated-unq outdated-all / unq all: 424 814 / 425 815
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-16] / []

2024-10-26T00:46:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11527426128 # 460
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-26
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 422 812 / 425 815
* notice: next accum: outdated-unq outdated-all / unq all: 423 813 / 425 815
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-12] / []

2024-10-24T00:48:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11490533844 # 458