@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-11-14T00:48:07Z",
+  "timestamp" : "2024-11-16T00:50:38Z",
   "count_outdated" : 815,
   "uniques_outdated" : 425,
-  "count" : 816,
-  "uniques" : 426,
+  "count" : 817,
+  "uniques" : 427,
   "clones" : [
     {
       "timestamp": "2024-11-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-11-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
