@@ -1,9 +1,14 @@
 {
-  "count": 1,
+  "count": 2,
   "uniques": 1,
   "clones": [
     {
       "timestamp": "2024-11-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-11-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
