@@ -1,3 +1,12 @@
+2024-11-16T00:50:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11865689614 # 481
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-16
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 425 815 / 426 816
+* notice: next accum: outdated-unq outdated-all / unq all: 425 815 / 427 817
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-11-15]
+
 2024-11-14T00:48:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11828524003 # 479
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-14
